--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,57 @@ body {
     padding-bottom: 5.5vh;
 }
 
+/* .first-container p {
+    color: white;
+} */
+
 .second-container {
     background-color: white;
     padding-left: 2.5vw;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+
+.fieldset-container {
+    display: flex;
+}
+
+.fieldset label{
+    display: block;
+    font-size: 0.9rem;
+    margin-bottom: 2px;
+}
+
+input:focus {
+    outline: 0;
+    border: 1px solid #ff008d;
+    box-shadow: 2px 2px 6px grey;
+}
+
+input {
+    height: 1.5rem;
+    border-radius: 6px;
+    border: 1px solid grey;
+    margin-bottom: 32px;
+    margin-right: 64px;
+}
+
+button[type="submit"] {
+    position: absolute;
+    margin-top: 32px;
 }
 
 .third-container {
     background-color: rgb(240, 240, 240);
     padding-left: 2.5vw;
+    padding-top: 64px;
+    height: 25.73vh;
+}
+
+/* .third-container p {
+    color: white;
+} */
+
+.third-container a {
+    text-decoration: none;
+    color: #ff008d;
 }
