Fix height of the third right container

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-body {
+body, html {
+    height: 100%;
     margin: 0;
     background: url(../img/bg.jpg);
     background-size: cover;
@@ -47,8 +48,9 @@ body {
     display: flex;
     flex-direction: column;
     width: 65vw;
-    height: auto;
+    height: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 100%;
 }
 
 .first-container {
@@ -104,10 +106,10 @@ button[type="submit"] {
 }
 
 .third-container {
+    height: 100%;
     background-color: rgb(240, 240, 240);
     padding-left: 2.5vw;
     padding-top: 80px;
-    height: 23.5vh;
 }
 
 .third-container a {
